--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ description = "El Decko GTK4 User Interface"
 license = { text = "GPL-3"}
 dependencies = [
     "el_decko_core>=2022.12.28",
-    "xdg"
+    "xdg",
+    "PyGObject>=3.42.2"
 ]
 
 [project.scripts]
